This is final commit for lab 2

--- a/Lab_2.ipynb
+++ b/Lab_2.ipynb
@@ -66,7 +66,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### Scatter plot for different species sepal length and sepal width using plotly"
+   ]
   },
   {
    "cell_type": "code",
