--- a/Lab_8_9_8977662.ipynb
+++ b/Lab_8_9_8977662.ipynb
@@ -1420,9 +1420,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tensorflow_cpu",
+   "display_name": "CSCN8010_classic_ml",
    "language": "python",
-   "name": "tensorflow_cpu"
+   "name": "cscn8010_classic_ml"
   },
   "language_info": {
    "codemirror_mode": {
